can't compile on Winows10
I test !2 (merged) on Windows10, I compile it on msys2. Some errors appear.
usbredirhost.c: In function 'usbredirhost_can_write_iso_package':
usbredirhost.c:1043:19: error: unknown conversion type character 'l' in format [-Werror=format=]
1043 | DEBUG("START dropping isoc packets %" PRIu64 " buffer > %" PRIu64 " hi threshold",
| ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
usbredirhost.c:186:57: note: in definition of macro 'DEBUG'
186 | #define DEBUG(...) va_log(host, usbredirparser_debug, __VA_ARGS__)
| ^~~~~~~~~~~
usbredirhost.c:1043:19: error: unknown conversion type character 'l' in format [-Werror=format=]
1043 | DEBUG("START dropping isoc packets %" PRIu64 " buffer > %" PRIu64 " hi threshold",
| ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
usbredirhost.c:186:57: note: in definition of macro 'DEBUG'
186 | #define DEBUG(...) va_log(host, usbredirparser_debug, __VA_ARGS__)
| ^~~~~~~~~~~
usbredirhost.c:1043:19: error: too many arguments for format [-Werror=format-extra-args]
1043 | DEBUG("START dropping isoc packets %" PRIu64 " buffer > %" PRIu64 " hi threshold",
But I test PRIu64
in my environment. I use this case:
#include <stdio.h>
#include <stdlib.h>
#include <inttypes.h>
int main() {
long long int a = 6;
printf("a= %" PRIu64 " \n", a);
return 0;
}
This example compiles and runs normally.
gcc -g -Wall test.c
$ ./a.exe
a= 6
btw:My operation process is as follows
step 1:
I download msys2 on:http://sourceforge.net/projects/msys2
step 2:
pacman -S autoconf
pacman -S autogen
pacman -S automake
pacman -S git
pacman -S mingw-w64-x86_64-pkg-config
pacman -S mingw-w64-x86_64-gcc
pacman -S mingw64/mingw-w64-x86_64-cmake
pacman -S libtool
pacman -S mingw-w64-x86_64-libusb
pacman -S make
step3:
git fetch "https://gitlab.freedesktop.org/victortoso/usbredir.git" usbredirect
git checkout -b "victortoso/usbredir-usbredirect" FETCH_HEAD
step4:
./autogen.sh
./configure --prefix=/opt --disable-dependency-tracking
make [error]