build-sys: Fix mingw build with __MINGW_PRINTF_FORMAT

Address the following error:

 > usbredirhost.c: In function 'usbredirhost_can_write_iso_package':
 > usbredirhost.c:1043:19: error: unknown conversion type character 'l' in format [-Werror=format=]
 >  1043 |             DEBUG("START dropping isoc packets %" PRIu64 " buffer > %" PRIu64 " hi threshold",
 >       |                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 > usbredirhost.c:186:57: note: in definition of macro 'DEBUG'

I've cherry-picked Frediano's patch in the #11 issue bellow.

Fixes: https://gitlab.freedesktop.org/spice/usbredir/-/issues/11

Signed-off-by: Victor Toso <victortoso@redhat.com>